--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 #include ~/.cache/wal/colors-kitty.conf
 
-font_family     Fira Code SemiBold
+font_family     JetBrains Mono NF Medium
 font_size 	    11.0
 bold_font       auto
 italic_font      auto
