--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -20,7 +20,7 @@ env = HYPRCURSOR_SIZE,24
 env = WLR_DRM_NO_ATOMIC,1
 
 # vulkan
-env = WLR_RENDERER,vulkan
+# env = WLR_RENDERER,vulkan
 # env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 
 # firefox
