--- a/.config/hypr/UserConfigs/Monitors.conf
+++ b/.config/hypr/UserConfigs/Monitors.conf
@@ -8,9 +8,9 @@
 
 # Monitors
 monitor=HDMI-A-1,1920x1080@60,0x0,1
-# monitor=eDP-2,2560x1600@240,0x1080,1.25
-monitor=eDP-1,1920x1080@60,0x1080,1.25
-# monitor=,2560x1600@60,0x1080,1.25
+monitor=eDP-2,2560x1600@240,0x1080,1.25
+# monitor=eDP-1,1920x1080@60,0x1080,1.25
+monitor=,2560x1600@60,0x1080,1.25
 
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
