update eww, delete lot's of file and now ues wallust

--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -27,6 +27,7 @@ exec-once = blueman-applet &
 exec-once = rog-control-center &
 exec-once = eww daemon &
 exec-once = eww open bar --arg mon=0 &
+exec-once = eww open-many wswid sysinfo &
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
