--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -4,6 +4,7 @@
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = float, nm-connection-editor|blueman-manager
 windowrule = float, pavucontrol
+windowrule = float, minirt_bonus
 windowrule = float, nwg-look|qt5ct|mpv
 windowrule = float, onedriver|onedriver-launcher
 windowrule = float, eog
@@ -31,7 +32,7 @@ windowrulev2 = workspace 5 silent, class:^(lutris)$
 windowrulev2 = workspace 6, class:^(virt-manager)$
 windowrulev2 = workspace 7 silent, class:^(discord)$
 windowrulev2 = workspace 7 silent, class:^([Aa]rm[Cc]ord)$
-windowrulev2 = workspace 7 silent, title: ^(WhatsApp Web)$
+windowrulev2 = workspace 7 silent, title: ^(web.whatsapp.com_/)$
 windowrulev2 = workspace 7 silent, class:^(WebCord)$
 windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
@@ -46,7 +47,7 @@ windowrulev2 = opacity 0.9 0.7, class:^(Firefox-esr)$
 windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
 windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
 windowrulev2 = opacity 0.9 0.7, class:^(gedit)$
-windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
+windowrulev2 = opacity 0.95 override 0.8 override 0.95 override, class:^(kitty)$
 windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
 windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
 windowrulev2 = opacity 0.9 0.7, class:^(VSCodium)$
@@ -63,6 +64,12 @@ windowrulev2 = forceinput, class:^([Ww]ofi)$
 # layerrule = unset, rofi
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
+layerrule = blur, wswid
+layerrule = ignorezero, wswid
+layerrule = blur, sysinfo
+layerrule = ignorezero, sysinfo
+layerrule = blur, music
+layerrule = ignorezero, music
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = blur, ewwbar
