--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -35,6 +35,7 @@ bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
 bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
+bind = $mainMod SHIFT, W, exec, swww kill # Select wallpaper to apply
 bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 
 # Waybar / Bar related
@@ -47,13 +48,15 @@ bind = $mainMod CTRL, D, layoutmsg, removemaster
 # bind = $mainMod, I, layoutmsg, addmaster
 bind = $mainMod, N, layoutmsg, cyclenext
 bind = $mainMod, P, layoutmsg, cycleprev
-bind = $mainMod, M, exec, hyprctl dispatch splitratio 0.3
-# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, M, exec, eww o --toggle music
+# bind = $mainMod, O, pseudo, # dwindle
 bind = $mainMod, I, layoutmsg, swapwithmaster
+bind = $mainMod, I, layoutmsg, swapsplit
+bind = $mainMod, O, layoutmsg, togglesplit
 
 # group
-bind = $mainMod, G, togglegroup
-bind = ALT, tab, changegroupactive  #change focus to another window  
+# bind = $mainMod, G, togglegroup
+# bind = ALT, tab, changegroupactive  #change focus to another window  
 
 # Special Keys / Hot Keys
 bind = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
@@ -78,7 +81,7 @@ bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now
 bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area
 bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 #screenshot in 5 secs
 bind = $mainMod ALT, Print, exec, $scriptsDir/ScreenShot.sh --in10 #screenshot in 10 secs
-bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot in 10 secs
+bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot the app
 
 # screenshot with swappy (another screenshot tool)
 bind = $mainMod ALT, S, exec, $scriptsDir/ScreenShot.sh --swappy
@@ -122,16 +125,16 @@ bind = $mainMod SHIFT, S, movetoworkspace, special
 bind = $mainMod, S, togglespecialworkspace,
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, 1, exec, $HOME/.config/eww/scripts/openWSWid.sh 1
+bind = $mainMod, 2, exec, $HOME/.config/eww/scripts/openWSWid.sh 2
+bind = $mainMod, 3, exec, $HOME/.config/eww/scripts/openWSWid.sh 3
+bind = $mainMod, 4, exec, $HOME/.config/eww/scripts/openWSWid.sh 4
+bind = $mainMod, 5, exec, $HOME/.config/eww/scripts/openWSWid.sh 5
+bind = $mainMod, 6, exec, $HOME/.config/eww/scripts/openWSWid.sh 6
+bind = $mainMod, 7, exec, $HOME/.config/eww/scripts/openWSWid.sh 7
+bind = $mainMod, 8, exec, $HOME/.config/eww/scripts/openWSWid.sh 8
+bind = $mainMod, 9, exec, $HOME/.config/eww/scripts/openWSWid.sh 9
+bind = $mainMod, 0, exec, $HOME/.config/eww/scripts/openWSWid.sh 10
 
 # Move active window and follow to workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
