--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,3 @@
-#include ~/.cache/wal/colors-kitty.conf
-
 font_family     JetBrains Mono NF Medium
 font_size 	    11.0
 bold_font       auto
@@ -9,19 +7,44 @@ bold_italic_font auto
 scrollback_pager nvim -R -M --cmd 'lua require("kitty+page")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
 
-background_opacity 0.8
-
 confirm_os_window_close 0
 
 enable_audio_bell no
-cursor_blink_interval -1
-
-map ctrl+shift+n launch --cwd=current --type os-window
-# selection_foreground #000000
-# selection_background #F5FBFF
+cursor_blink_interval 0.7
 
 
-# BEGIN_KITTY_THEME
-# Jellybeans
-include current-theme.conf
-# END_KITTY_THEM
+confirm_os_window_close 0
+
+foreground         #FEF9EC
+background         #000001
+background_opacity 0.7
+cursor             #ff9050
+
+selection_foreground #202020
+selection_background #ff9050
+
+active_tab_foreground     #000001
+active_tab_background     #FEF9EC
+inactive_tab_foreground   #FEF9EC
+inactive_tab_background   #000001
+
+active_border_color   #FEF9EC
+inactive_border_color #000001
+bell_border_color     #94786D
+
+color0      #000001
+color1		#94786D
+color2		#508A92
+color3		#B08A7C
+color4		#B39649
+color5		#AE9B84
+color6		#BCB398
+color7		#F5EFDC
+color8		#ABA79A
+color9		#C6A091
+color10		#6AB8C2
+color11		#EAB8A5
+color12		#EFC861
+color13		#E8CFB0
+color14		#FBEFCA
+color15		#F5EFDC
