--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -17,11 +17,13 @@ env = QT_IM_MODULE,fcitx
 env = XMODIFIERS,@im=fcitx
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
-env = WLR_DRM_NO_ATOMIC,1
+env = XCURSOR_SIZE,24
+# env = WLR_NO_HARDWARE_CURSORS,1
+# env = WLR_DRM_NO_ATOMIC,1
 
 # vulkan
 # env = WLR_RENDERER,vulkan
-# env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
+env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
 
 # firefox
 env = MOZ_ENABLE_WAYLAND,1
