--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -12,8 +12,8 @@ $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
 # rofi App launcher
-bind = $mainMod, space, exec, pkill wofi || wofi --show drun
-bind = $mainMod, D, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window &
+# bind = $mainMod, D, exec, pkill wofi || wofi --show drun
+bind = $mainMod, space, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window &
 bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol &
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
