--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -12,9 +12,10 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
-env = GTK_IM_MODULE,fcitx
-env = QT_IM_MODULE,fcitx
+# env = GTK_IM_MODULE,fcitx
+# env = QT_IM_MODULE,fcitx
 env = XMODIFIERS,@im=fcitx
+env = WAYLAND_DISPLAY,xwayland
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
