--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -33,6 +33,7 @@ windowrulev2 = workspace 6, class:^(virt-manager)$
 windowrulev2 = workspace 7 silent, class:^(discord)$
 windowrulev2 = workspace 7 silent, class:^([Aa]rm[Cc]ord)$
 windowrulev2 = workspace 7 silent, title: ^(web.whatsapp.com_/)$
+windowrulev2 = workspace 7 silent, title: ^(web.telegram.org_/)$
 windowrulev2 = workspace 7 silent, class:^(WebCord)$
 windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
@@ -60,16 +61,19 @@ windowrulev2 = immediate, class:^(osu)$
 # windowrulev2 = stayfocused, class:^([Rr]ofi)$
 windowrulev2 = stayfocused, class:^([Ww]ofi)$
 # windowrulev2 = forceinput, class:^([Rr]ofi)$
-windowrulev2 = forceinput, class:^([Ww]ofi)$
+# windowrulev2 = forceinput, class:^([Ww]ofi)$
 # layerrule = unset, rofi
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
 layerrule = blur, wswid
 layerrule = ignorezero, wswid
+layerrule = xray 1, wswid
 layerrule = blur, sysinfo
+layerrule = xray 1, sysinfo
 layerrule = ignorezero, sysinfo
 layerrule = blur, music
 layerrule = ignorezero, music
+layerrule = animation slide, music
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = blur, ewwbar
