--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -33,12 +33,15 @@ bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 
 # FEATURES / EXTRAS (UserScripts)
 bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
+bind = $mainMod, M, exec, eww o --toggle music
+bind = $mainMod, A, exec, $HOME/.config/eww/scripts/openbar.sh
 bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
-bind = $mainMod SHIFT, W, exec, swww kill # Select wallpaper to apply
+bind = $mainMod SHIFT, W, exec, swww query && swww kill || swww-daemon &
 bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 
 # Waybar / Bar related
+bind = $mainMod, B, exec, $HOME/.config/eww/scripts/openbar.sh
 bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar 
 bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
 bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
@@ -48,7 +51,6 @@ bind = $mainMod CTRL, D, layoutmsg, removemaster
 # bind = $mainMod, I, layoutmsg, addmaster
 bind = $mainMod, N, layoutmsg, cyclenext
 bind = $mainMod, P, layoutmsg, cycleprev
-bind = $mainMod, M, exec, eww o --toggle music
 # bind = $mainMod, O, pseudo, # dwindle
 bind = $mainMod, I, layoutmsg, swapwithmaster
 bind = $mainMod, I, layoutmsg, swapsplit
@@ -125,50 +127,50 @@ bind = $mainMod SHIFT, S, movetoworkspace, special
 bind = $mainMod, S, togglespecialworkspace,
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, exec, $HOME/.config/eww/scripts/openWSWid.sh 1
-bind = $mainMod, 2, exec, $HOME/.config/eww/scripts/openWSWid.sh 2
-bind = $mainMod, 3, exec, $HOME/.config/eww/scripts/openWSWid.sh 3
-bind = $mainMod, 4, exec, $HOME/.config/eww/scripts/openWSWid.sh 4
-bind = $mainMod, 5, exec, $HOME/.config/eww/scripts/openWSWid.sh 5
-bind = $mainMod, 6, exec, $HOME/.config/eww/scripts/openWSWid.sh 6
-bind = $mainMod, 7, exec, $HOME/.config/eww/scripts/openWSWid.sh 7
-bind = $mainMod, 8, exec, $HOME/.config/eww/scripts/openWSWid.sh 8
-bind = $mainMod, 9, exec, $HOME/.config/eww/scripts/openWSWid.sh 9
-bind = $mainMod, 0, exec, $HOME/.config/eww/scripts/openWSWid.sh 10
+bind = $mainMod, 1, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 1
+bind = $mainMod, 2, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 2
+bind = $mainMod, 3, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 3
+bind = $mainMod, 4, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 4
+bind = $mainMod, 5, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 5
+bind = $mainMod, 6, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 6
+bind = $mainMod, 7, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 7
+bind = $mainMod, 8, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 8
+bind = $mainMod, 9, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 9
+bind = $mainMod, 0, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 10
 
 # Move active window and follow to workspace
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-bind = $mainMod SHIFT, bracketleft, movetoworkspace, -1 # brackets [ or ]
-bind = $mainMod SHIFT, bracketright, movetoworkspace, +1
+bind = $mainMod SHIFT, 1, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 1
+bind = $mainMod SHIFT, 2, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 2
+bind = $mainMod SHIFT, 3, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 3
+bind = $mainMod SHIFT, 4, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 4
+bind = $mainMod SHIFT, 5, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 5
+bind = $mainMod SHIFT, 6, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 6
+bind = $mainMod SHIFT, 7, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 7
+bind = $mainMod SHIFT, 8, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 8
+bind = $mainMod SHIFT, 9, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 9
+bind = $mainMod SHIFT, 0, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows 10
+bind = $mainMod SHIFT, bracketleft, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows -1 # brackets [ or ]
+bind = $mainMod SHIFT, bracketright, exec, $HOME/.config/eww/scripts/openWSWid.sh movetows +1
 
 # Move active window to a workspace silently
-bind = $mainMod CTRL, 1, movetoworkspacesilent, 1
-bind = $mainMod CTRL, 2, movetoworkspacesilent, 2
-bind = $mainMod CTRL, 3, movetoworkspacesilent, 3
-bind = $mainMod CTRL, 4, movetoworkspacesilent, 4
-bind = $mainMod CTRL, 5, movetoworkspacesilent, 5
-bind = $mainMod CTRL, 6, movetoworkspacesilent, 6
-bind = $mainMod CTRL, 7, movetoworkspacesilent, 7
-bind = $mainMod CTRL, 8, movetoworkspacesilent, 8
-bind = $mainMod CTRL, 9, movetoworkspacesilent, 9
-bind = $mainMod CTRL, 0, movetoworkspacesilent, 10
-bind = $mainMod CTRL, bracketleft, movetoworkspacesilent, -1 # brackets [ or ]
-bind = $mainMod CTRL, bracketright, movetoworkspacesilent, +1
+bind = $mainMod CTRL, 1, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 1
+bind = $mainMod CTRL, 2, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 2
+bind = $mainMod CTRL, 3, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 3
+bind = $mainMod CTRL, 4, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 4
+bind = $mainMod CTRL, 5, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 5
+bind = $mainMod CTRL, 6, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 6
+bind = $mainMod CTRL, 7, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 7
+bind = $mainMod CTRL, 8, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 8
+bind = $mainMod CTRL, 9, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 9
+bind = $mainMod CTRL, 0, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent 10
+bind = $mainMod CTRL, bracketleft, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent -1 # brackets [ or ]
+bind = $mainMod CTRL, bracketright, exec, $HOME/.config/eww/scripts/openWSWid.sh movetowsSilent +1
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
-bind = $mainMod, period, workspace, e+1
-bind = $mainMod, comma, workspace, e-1
+bind = $mainMod, bracketleft, workspace, e-1
+bind = $mainMod, bracketright, workspace, e+1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
