--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(000001)
-$backgroundColTransparent = rgba(00000160)
-$foreground = rgb(FEF9EC)
-$color0 = rgb(000001)
-$color1 = rgb(94786D)
-$color2 = rgb(508A92)
-$color2_shadow = rgba(508A92a0)
-$color3 = rgb(B08A7C)
-$color4 = rgb(B39649)
-$color5 = rgb(AE9B84)
-$color6 = rgb(BCB398)
-$color7 = rgb(F5EFDC)
-$color8 = rgb(ABA79A)
-$color9 = rgb(C6A091)
-$color10 = rgb(6AB8C2)
-$color11 = rgb(EAB8A5)
-$color12 = rgb(EFC861)
-$color13 = rgb(E8CFB0)
-$color14 = rgb(FBEFCA)
-$color15 = rgb(F5EFDC)
+$background = rgb(020406)
+$backgroundColTransparent = rgba(02040660)
+$foreground = rgb(FCF5EA)
+$color0 = rgb(020406)
+$color1 = rgb(7F564C)
+$color2 = rgb(806465)
+$color2_shadow = rgba(806465a0)
+$color3 = rgb(A76B58)
+$color4 = rgb(A19280)
+$color5 = rgb(B99580)
+$color6 = rgb(B9AA92)
+$color7 = rgb(F3E8D8)
+$color8 = rgb(AAA297)
+$color9 = rgb(A97366)
+$color10 = rgb(AA8587)
+$color11 = rgb(DF8F75)
+$color12 = rgb(D7C2AA)
+$color13 = rgb(F7C6AA)
+$color14 = rgb(F7E2C2)
+$color15 = rgb(F3E8D8)
