--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -25,15 +25,15 @@ exec-once = nm-applet --indicator &
 exec-once = swaync &
 exec-once = blueman-applet & 
 exec-once = rog-control-center &
-exec-once = eww daemon &
-exec-once = eww open bar --arg mon=0 &
+exec-once = eww daemon
+# exec-once = eww open bar --arg mon=0 &
 exec-once = eww open-many wswid sysinfo &
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 exec-once = fcitx5-remote -r
-# exec-once = fcitx5 -d --replace
-# exec-once = fcitx5-remote -r
+exec-once = fcitx5 -d --replace
+exec-once = fcitx5-remote -r
 
 #clipboard manager
 exec-once = wl-paste --type text --watch cliphist store 
