--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -14,7 +14,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 # rofi App launcher
 # bind = $mainMod, D, exec, pkill wofi || wofi --show drun
 bind = $mainMod, space, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window &
-bind = $mainMod, A, exec, pkill pavucontrol || pavucontrol &
+bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files
