--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -17,7 +17,7 @@ dwindle {
 }
 
 master {
-  new_is_master=1
+  # new_is_master=1
   new_on_top=1
   mfact = 0.8
   special_scale_factor = 1
@@ -144,10 +144,10 @@ misc {
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
   #vrr = 0
-  enable_swallow = true
-  no_direct_scanout = true #for fullscreen games
+  # enable_swallow = true
+  # no_direct_scanout = true #for fullscreen games
   focus_on_activate = false
-  swallow_regex = ^(kitty)$
+  # swallow_regex = ^(kitty)$
   #disable_autoreload = true
 }
 
