--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,20 +1,26 @@
 
-source = $HOME/.cache/wal/colors-hyprland
+source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
 
 general {
 	grace =1
-
 }
 
 background {
-	path = $HOME/.config/hypr/.current_wallpaper
+    path = $HOME/.config/hypr/.current_wallpaper
+    blur {
+	enabled = true	
+	size = 6
+	passes = 3
+	ignore_opacity = true
+	new_optimizations = true
+    }
 }
 
 label {
     monitor =
     text = Hi there, $USER
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = $foregroundCol
+    color = $foreground
     font_size = 80
     font_family = Noto Sans
     rotate = 0 # degrees, counter-clockwise
