--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,6 +6,7 @@ bold_italic_font auto
 
 scrollback_pager nvim -R -M --cmd 'lua require("kitty+page")(INPUT_LINE_NUMBER, CURSOR_LINE, CURSOR_COLUMN)' -  
 
+map ctrl+shift+n launch --cwd=current --type os-window
 
 confirm_os_window_close 0
 
@@ -15,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FEF9EC
-background         #000001
+foreground         #FCF5EA
+background         #020406
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #000001
-active_tab_background     #FEF9EC
-inactive_tab_foreground   #FEF9EC
-inactive_tab_background   #000001
+active_tab_foreground     #020406
+active_tab_background     #FCF5EA
+inactive_tab_foreground   #FCF5EA
+inactive_tab_background   #020406
 
-active_border_color   #FEF9EC
-inactive_border_color #000001
-bell_border_color     #94786D
+active_border_color   #FCF5EA
+inactive_border_color #020406
+bell_border_color     #7F564C
 
-color0      #000001
-color1		#94786D
-color2		#508A92
-color3		#B08A7C
-color4		#B39649
-color5		#AE9B84
-color6		#BCB398
-color7		#F5EFDC
-color8		#ABA79A
-color9		#C6A091
-color10		#6AB8C2
-color11		#EAB8A5
-color12		#EFC861
-color13		#E8CFB0
-color14		#FBEFCA
-color15		#F5EFDC
+color0      #020406
+color1		#7F564C
+color2		#806465
+color3		#A76B58
+color4		#A19280
+color5		#B99580
+color6		#B9AA92
+color7		#F3E8D8
+color8		#AAA297
+color9		#A97366
+color10		#AA8587
+color11		#DF8F75
+color12		#D7C2AA
+color13		#F7C6AA
+color14		#F7E2C2
+color15		#F3E8D8
