--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -3,6 +3,7 @@
 #environment-variables
 env = CLUTTER_BACKEND,wayland
 env = GDK_BACKEND,wayland,x11
+env = GDK_SCALE,2
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_QPA_PLATFORMTHEME,qt5ct  
@@ -11,10 +12,10 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
-# env = GTK_IM_MODULE,fcitx
-# env = QT_IM_MODULE,fcitx
-env = XMODIFIERS,@im=fcitx
+env = ELECTRON_OZONE_PLATFORM_HINT,autoenv
+env = GTK_IM_MODULE,fcitx
+env = QT_IM_MODULE,fcitx
+# env = XMODIFIERS,@im=fcitx
 env = WAYLAND_DISPLAY,xwayland
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
