--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -7,6 +7,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 # $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 # $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
+exec-once = hyprpm enable Hyprspace
 
 # wallpaper stuff / More wallpaper options below
 exec-once = swww query || swww init
@@ -28,9 +29,11 @@ exec-once = rog-control-center &
 exec-once = eww daemon
 # exec-once = eww open bar --arg mon=0 &
 exec-once = eww open-many wswid sysinfo &
+exec-once = $HOME/.config/eww/scripts/openQuickActions.sh
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
+exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 exec-once = fcitx5-remote -r
 exec-once = fcitx5 -d --replace
 exec-once = fcitx5-remote -r
