--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -15,6 +15,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 # bind = $mainMod, D, exec, pkill wofi || wofi --show drun
 bind = $mainMod, space, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window &
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
+# bind = $mainMod, Z, overview:toggle
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files
