--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -68,6 +68,9 @@ layerrule = ignorezero, rofi
 layerrule = blur, wswid
 layerrule = ignorezero, wswid
 layerrule = xray 1, wswid
+layerrule = blur, clock_wid
+layerrule = ignorezero, clock_wid
+layerrule = xray 1, clock_wid
 layerrule = blur, sysinfo
 layerrule = xray 1, sysinfo
 layerrule = ignorezero, sysinfo
