--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -33,7 +33,7 @@ bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 
 # FEATURES / EXTRAS (UserScripts)
 bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
-bind = $mainMod, M, exec, eww o --toggle music
+bind = $mainMod, M, exec, $HOME/.config/eww/scripts/musicToggle.sh
 bind = $mainMod, A, exec, $HOME/.config/eww/scripts/openbar.sh
 bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
