--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(020406)
-$backgroundColTransparent = rgba(02040660)
-$foreground = rgb(FCF5EA)
-$color0 = rgb(020406)
-$color1 = rgb(7F564C)
-$color2 = rgb(806465)
-$color2_shadow = rgba(806465a0)
-$color3 = rgb(A76B58)
-$color4 = rgb(A19280)
-$color5 = rgb(B99580)
-$color6 = rgb(B9AA92)
-$color7 = rgb(F3E8D8)
-$color8 = rgb(AAA297)
-$color9 = rgb(A97366)
-$color10 = rgb(AA8587)
-$color11 = rgb(DF8F75)
-$color12 = rgb(D7C2AA)
-$color13 = rgb(F7C6AA)
-$color14 = rgb(F7E2C2)
-$color15 = rgb(F3E8D8)
+$background = rgb(000003)
+$backgroundColTransparent = rgba(00000360)
+$foreground = rgb(FFF2DE)
+$color0 = rgb(000003)
+$color1 = rgb(685A4F)
+$color2 = rgb(A0502C)
+$color2_shadow = rgba(A0502Ca0)
+$color3 = rgb(AA5243)
+$color4 = rgb(467F6A)
+$color5 = rgb(B48957)
+$color6 = rgb(BEA479)
+$color7 = rgb(F6E5C8)
+$color8 = rgb(ACA08C)
+$color9 = rgb(8B7869)
+$color10 = rgb(D66A3B)
+$color11 = rgb(E36D5A)
+$color12 = rgb(5DA98D)
+$color13 = rgb(F0B674)
+$color14 = rgb(FEDBA1)
+$color15 = rgb(F6E5C8)
