--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FCF5EA
-background         #020406
+foreground         #FFF2DE
+background         #000003
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #020406
-active_tab_background     #FCF5EA
-inactive_tab_foreground   #FCF5EA
-inactive_tab_background   #020406
+active_tab_foreground     #000003
+active_tab_background     #FFF2DE
+inactive_tab_foreground   #FFF2DE
+inactive_tab_background   #000003
 
-active_border_color   #FCF5EA
-inactive_border_color #020406
-bell_border_color     #7F564C
+active_border_color   #FFF2DE
+inactive_border_color #000003
+bell_border_color     #685A4F
 
-color0      #020406
-color1		#7F564C
-color2		#806465
-color3		#A76B58
-color4		#A19280
-color5		#B99580
-color6		#B9AA92
-color7		#F3E8D8
-color8		#AAA297
-color9		#A97366
-color10		#AA8587
-color11		#DF8F75
-color12		#D7C2AA
-color13		#F7C6AA
-color14		#F7E2C2
-color15		#F3E8D8
+color0      #000003
+color1		#685A4F
+color2		#A0502C
+color3		#AA5243
+color4		#467F6A
+color5		#B48957
+color6		#BEA479
+color7		#F6E5C8
+color8		#ACA08C
+color9		#8B7869
+color10		#D66A3B
+color11		#E36D5A
+color12		#5DA98D
+color13		#F0B674
+color14		#FEDBA1
+color15		#F6E5C8
