--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -17,15 +17,13 @@ dwindle {
 }
 
 master {
-  # new_is_master=1
+  new_status = master
   new_on_top=1
   mfact = 0.8
   special_scale_factor = 1
 }
 
 general {
-  sensitivity=1.00
-  apply_sens_to_raw=1
   gaps_in = 4
   gaps_out = 14
   border_size = 2
@@ -72,9 +70,6 @@ decoration {
   }
 }
 
-workspace = special,gapsout:100
-workspace = special, on-created-empty:kitty
-    
 animations {
   enabled = yes
 
@@ -111,6 +106,8 @@ input {
   kb_model=
   kb_options=grp:alt_shift_toggle
   kb_rules=
+  sensitivity=0.00
+  accel_profile=flat
   repeat_rate=50
   repeat_delay=300
   numlock_by_default=1
@@ -143,7 +140,8 @@ misc {
   disable_hyprland_logo = true
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
-  #vrr = 0
+  vrr = 2
+  animate_manual_resizes = true
   # enable_swallow = true
   # no_direct_scanout = true #for fullscreen games
   focus_on_activate = false
