--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -12,7 +12,8 @@ env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
-env = ELECTRON_OZONE_PLATFORM_HINT,autoenv
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = OZONE_PLATFORM,wayland
 env = GTK_IM_MODULE,fcitx
 env = QT_IM_MODULE,fcitx
 # env = XMODIFIERS,@im=fcitx
@@ -24,8 +25,8 @@ env = XCURSOR_SIZE,24
 # env = WLR_DRM_NO_ATOMIC,1
 
 # vulkan
-# env = WLR_RENDERER,vulkan
-env = WLR_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
+env = WLR_RENDERER,vulkan
+# env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
 
 # firefox
 env = MOZ_ENABLE_WAYLAND,1
