--- a/.config/hypr/UserConfigs/Laptops.conf
+++ b/.config/hypr/UserConfigs/Laptops.conf
@@ -15,6 +15,7 @@ bind = , xf86Launch4, exec, asusctl profile -n  #FN+F5 change of fan profiles (Q
 bind = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec 
 bind = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc 
 bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh #disable touchpad
+bind = $mainMod, D, exec, $scriptsDir/TouchPad.sh #disable touchpad
 
 # Screenshot keybindings for Asus G15 (no PrinSrc button)
 bind = $mainMod, F6, exec, $scriptsDir/ScreenShot.sh --now # Fullscreen
@@ -31,8 +32,8 @@ bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, 
 bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
 bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-2, preferred, auto, 1"
 bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-2, disable"
-bindl = , switch:off:Lid Switch,exec,eww open bar --arg mon=0
-bindl = , switch:on:Lid Switch,exec,eww open bar --arg mon=0
+bindl = , switch:off:Lid Switch,exec, eww close-many wswid sysinfo &
+bindl = , switch:on:Lid Switch,exec, eww open-many wswid sysinfo &
 # bindl = , switch:off:Lid Switch,dpms, off
 # bindl = , switch:on:Lid Switch,dpms, on
 
