--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -7,7 +7,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 # $wallDIR=$HOME/Pictures/wallpapers
 $lock = $scriptsDir/LockScreen.sh
 # $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
-exec-once = hyprpm enable Hyprspace
+# exec-once = hyprpm enable Hyprspace
 
 # wallpaper stuff / More wallpaper options below
 exec-once = swww query || swww init
