--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -34,6 +34,11 @@ general {
   col.inactive_border = $background
 
   layout = dwindle
+
+  # snap {
+  #   enabled = true
+  #   border_overlap = true
+  # }
 }
 
 group {
@@ -54,11 +59,13 @@ decoration {
   dim_inactive = true
   dim_strength = 0.05
 
-  drop_shadow=true
-  shadow_range=6
-  shadow_render_power = 1
-  col.shadow = $color2_shadow
-  col.shadow_inactive = $backgroundColTransparent
+  shadow {
+    enabled=true
+    range=6
+    render_power = 1
+    color = $color2_shadow
+    color_inactive = $backgroundColTransparent
+  }
 
   blur {
     enabled = true	
@@ -118,11 +125,12 @@ input {
   touchpad {
     disable_while_typing=1
     natural_scroll=1 
+    scroll_factor=0.5
     clickfinger_behavior=0
     middle_button_emulation=1
     tap-to-click=1
-    drag_lock=0
-          }
+    drag_lock=1
+  }
 }
 
 gestures {
@@ -136,11 +144,15 @@ gestures {
   workspace_swipe_forever=1
 }
 
+cursor {
+  hide_on_key_press = true
+}
+
 misc {
   disable_hyprland_logo = true
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
-  vrr = 2
+  vrr = 1
   animate_manual_resizes = true
   # enable_swallow = true
   # no_direct_scanout = true #for fullscreen games
@@ -157,5 +169,6 @@ binds {
 
 #Could help when scaling and not pixelating
 xwayland {
-    force_zero_scaling = true
+  enabled = true
+  force_zero_scaling = true
 }
