--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -12,6 +12,7 @@ windowrule = float, zoom
 windowrule = float, rofi
 windowrule = float, gnome-system-monitor
 windowrule = float, yad
+windowrule = float, title:^(shader_test)$
 
 windowrule = noblur,gamescope
 windowrule = fullscreen,gamescope
@@ -23,6 +24,7 @@ windowrule = center,^(pavucontrol)
 # windowrule v2
 windowrulev2 = workspace 1, class:^(thunderbird)$
 windowrulev2 = workspace 2, class:^(firefox)$
+windowrulev2 = workspace 2 silent, title:^(shader_test)$
 windowrulev2 = workspace 2, class:^(Firefox-esr)$
 windowrulev2 = workspace 2, class:^(Microsoft-edge-beta)$ 
 # windowrulev2 = workspace 3, class:^([Tt]hunar)$
@@ -68,6 +70,9 @@ layerrule = ignorezero, rofi
 layerrule = blur, wswid
 layerrule = ignorezero, wswid
 layerrule = xray 1, wswid
+layerrule = blur, windows
+layerrule = ignorezero, windows
+layerrule = xray 1, windows
 layerrule = blur, clock_wid
 layerrule = ignorezero, clock_wid
 layerrule = xray 1, clock_wid
