--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -34,15 +34,17 @@ bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
 # FEATURES / EXTRAS (UserScripts)
 bind = $mainMod, E, exec, $UserScripts/QuickEdit.sh # Quick Edit Hyprland Settings
 bind = $mainMod, M, exec, $HOME/.config/eww/scripts/musicToggle.sh
-bind = $mainMod, A, exec, $HOME/.config/eww/scripts/openbar.sh
+bindt = $mainMod, A, exec, $HOME/.config/eww/scripts/openbar.sh
+bindtr = $mainMod, A, exec, $HOME/.config/eww/scripts/closebar.sh
 bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
 bind = $mainMod SHIFT, W, exec, swww query && swww kill || swww-daemon &
 bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 
 # Waybar / Bar related
-bind = $mainMod, B, exec, $HOME/.config/eww/scripts/openbar.sh
-bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar 
+bind = $mainMod, B, exec, zen-browser
+# bind = $mainMod, B, exec, $HOME/.config/eww/scripts/openbar.sh
+# bind = $mainMod, B, exec, killall -SIGUSR1 waybar # Toggle hide/show waybar 
 bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
 bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
 
@@ -89,6 +91,10 @@ bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot the app
 bind = $mainMod ALT, S, exec, $scriptsDir/ScreenShot.sh --swappy
 
 # Resize windows
+bind = $mainMod, U, setfloating
+bind = $mainMod, U, resizeactive,exact 35% 35%
+bind = $mainMod, U, moveactive,exact 65% 65%
+bind = $mainMod, U, moveactive,-30 -30
 binde = $mainMod SHIFT, left, resizeactive,-50 0
 binde = $mainMod SHIFT, right, resizeactive,50 0
 binde = $mainMod SHIFT, up, resizeactive,0 -50
@@ -125,6 +131,10 @@ bind = $mainMod SHIFT, tab, workspace, m-1
 # Special workspace
 bind = $mainMod SHIFT, S, movetoworkspace, special
 bind = $mainMod, S, togglespecialworkspace,
+# Special workspace
+bind = $mainMod SHIFT, C, movetoworkspace, special:code
+bind = $mainMod SHIFT, C, fullscreen, 0
+bind = $mainMod, C, togglespecialworkspace, code
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, exec, $HOME/.config/eww/scripts/openWSWid.sh ws 1
