--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(000003)
-$backgroundColTransparent = rgba(00000360)
-$foreground = rgb(FFF2DE)
-$color0 = rgb(000003)
-$color1 = rgb(685A4F)
-$color2 = rgb(A0502C)
-$color2_shadow = rgba(A0502Ca0)
-$color3 = rgb(AA5243)
-$color4 = rgb(467F6A)
-$color5 = rgb(B48957)
-$color6 = rgb(BEA479)
-$color7 = rgb(F6E5C8)
-$color8 = rgb(ACA08C)
-$color9 = rgb(8B7869)
-$color10 = rgb(D66A3B)
-$color11 = rgb(E36D5A)
-$color12 = rgb(5DA98D)
-$color13 = rgb(F0B674)
-$color14 = rgb(FEDBA1)
-$color15 = rgb(F6E5C8)
+$background = rgb(000002)
+$backgroundColTransparent = rgba(00000260)
+$foreground = rgb(FCEEDA)
+$color0 = rgb(000002)
+$color1 = rgb(6E5857)
+$color2 = rgb(A26C64)
+$color2_shadow = rgba(A26C64a0)
+$color3 = rgb(8C864B)
+$color4 = rgb(A4814B)
+$color5 = rgb(A39E5C)
+$color6 = rgb(B89B6F)
+$color7 = rgb(F2DFC1)
+$color8 = rgb(A99C87)
+$color9 = rgb(937574)
+$color10 = rgb(D89086)
+$color11 = rgb(BBB364)
+$color12 = rgb(DBAC64)
+$color13 = rgb(D9D27B)
+$color14 = rgb(F6CF94)
+$color15 = rgb(F2DFC1)
