--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FFF2DE
-background         #000003
+foreground         #FCEEDA
+background         #000002
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #000003
-active_tab_background     #FFF2DE
-inactive_tab_foreground   #FFF2DE
-inactive_tab_background   #000003
+active_tab_foreground     #000002
+active_tab_background     #FCEEDA
+inactive_tab_foreground   #FCEEDA
+inactive_tab_background   #000002
 
-active_border_color   #FFF2DE
-inactive_border_color #000003
-bell_border_color     #685A4F
+active_border_color   #FCEEDA
+inactive_border_color #000002
+bell_border_color     #6E5857
 
-color0      #000003
-color1		#685A4F
-color2		#A0502C
-color3		#AA5243
-color4		#467F6A
-color5		#B48957
-color6		#BEA479
-color7		#F6E5C8
-color8		#ACA08C
-color9		#8B7869
-color10		#D66A3B
-color11		#E36D5A
-color12		#5DA98D
-color13		#F0B674
-color14		#FEDBA1
-color15		#F6E5C8
+color0      #000002
+color1		#6E5857
+color2		#A26C64
+color3		#8C864B
+color4		#A4814B
+color5		#A39E5C
+color6		#B89B6F
+color7		#F2DFC1
+color8		#A99C87
+color9		#937574
+color10		#D89086
+color11		#BBB364
+color12		#DBAC64
+color13		#D9D27B
+color14		#F6CF94
+color15		#F2DFC1
