--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -14,8 +14,9 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 env = OZONE_PLATFORM,wayland
-env = GTK_IM_MODULE,fcitx
-env = QT_IM_MODULE,fcitx
+env = GDK_DISABLE,vulkan
+# env = GTK_IM_MODULE,fcitx
+# env = QT_IM_MODULE,fcitx
 # env = XMODIFIERS,@im=fcitx
 env = WAYLAND_DISPLAY,xwayland
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
