--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -10,7 +10,7 @@ $lock = $scriptsDir/LockScreen.sh
 # exec-once = hyprpm enable Hyprspace
 
 # wallpaper stuff / More wallpaper options below
-exec-once = swww query || swww init
+exec-once = swww query || swww-daemon
 # exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes 
 
 # Startup
