--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -60,7 +60,7 @@ decoration {
   dim_strength = 0.05
 
   shadow {
-    enabled=true
+    enabled=false
     range=6
     render_power = 1
     color = $color2_shadow
@@ -154,6 +154,7 @@ misc {
   mouse_move_enables_dpms = true
   vrr = 1
   animate_manual_resizes = true
+  background_color = 0xff1e1e2e
   # enable_swallow = true
   # no_direct_scanout = true #for fullscreen games
   focus_on_activate = false
