--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -4,6 +4,7 @@
 windowrule = float, org.kde.polkit-kde-authentication-agent-1
 windowrule = float, nm-connection-editor|blueman-manager
 windowrule = float, pavucontrol
+windowrule = float, org.pulseaudio.pavucontrol
 windowrule = float, minirt_bonus
 windowrule = float, nwg-look|qt5ct|mpv
 windowrule = float, onedriver|onedriver-launcher
@@ -34,6 +35,7 @@ windowrulev2 = workspace 5 silent, class:^(lutris)$
 windowrulev2 = workspace 6, class:^(virt-manager)$
 windowrulev2 = workspace 7 silent, class:^(discord)$
 windowrulev2 = workspace 7 silent, class:^([Aa]rm[Cc]ord)$
+windowrulev2 = workspace 7 silent, class:^([Vv]esk[Tt]op)$
 windowrulev2 = workspace 7 silent, title: ^(web.whatsapp.com_/)$
 windowrulev2 = workspace 7 silent, title: ^(web.telegram.org_/)$
 windowrulev2 = workspace 7 silent, class:^(WebCord)$
@@ -41,7 +43,7 @@ windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 
 #opacity (transparent) #enable as desired
 # windowrulev2 = opacity 0.9 0.6, class:^([Rr]ofi)$
-windowrulev2 = opacity 0.9 0.8, class:^(ArmCord)$
+windowrulev2 = opacity 0.9 0.8, class:^(vesktop)$
 windowrulev2 = opacity 0.9 0.8, title:^(WhatsApp Web)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser-dev)$
