--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(000002)
-$backgroundColTransparent = rgba(00000260)
-$foreground = rgb(FCEEDA)
-$color0 = rgb(000002)
-$color1 = rgb(6E5857)
-$color2 = rgb(A26C64)
-$color2_shadow = rgba(A26C64a0)
-$color3 = rgb(8C864B)
-$color4 = rgb(A4814B)
-$color5 = rgb(A39E5C)
-$color6 = rgb(B89B6F)
-$color7 = rgb(F2DFC1)
-$color8 = rgb(A99C87)
-$color9 = rgb(937574)
-$color10 = rgb(D89086)
-$color11 = rgb(BBB364)
-$color12 = rgb(DBAC64)
-$color13 = rgb(D9D27B)
-$color14 = rgb(F6CF94)
-$color15 = rgb(F2DFC1)
+$background = rgb(0F1112)
+$backgroundColTransparent = rgba(0F111260)
+$foreground = rgb(FCF5EA)
+$color0 = rgb(3A3B3D)
+$color1 = rgb(AC7360)
+$color2 = rgb(748173)
+$color2_shadow = rgba(748173a0)
+$color3 = rgb(AB8D89)
+$color4 = rgb(A19280)
+$color5 = rgb(B99580)
+$color6 = rgb(B9AA92)
+$color7 = rgb(F3E8D8)
+$color8 = rgb(AAA297)
+$color9 = rgb(DF8F75)
+$color10 = rgb(9BAC9A)
+$color11 = rgb(E4BCB7)
+$color12 = rgb(D7C2AA)
+$color13 = rgb(F7C6AA)
+$color14 = rgb(F7E2C2)
+$color15 = rgb(F3E8D8)
