--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FCEEDA
-background         #000002
+foreground         #FCF5EA
+background         #0F1112
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #000002
-active_tab_background     #FCEEDA
-inactive_tab_foreground   #FCEEDA
-inactive_tab_background   #000002
+active_tab_foreground     #0F1112
+active_tab_background     #FCF5EA
+inactive_tab_foreground   #FCF5EA
+inactive_tab_background   #0F1112
 
-active_border_color   #FCEEDA
-inactive_border_color #000002
-bell_border_color     #6E5857
+active_border_color   #FCF5EA
+inactive_border_color #0F1112
+bell_border_color     #AC7360
 
-color0      #000002
-color1		#6E5857
-color2		#A26C64
-color3		#8C864B
-color4		#A4814B
-color5		#A39E5C
-color6		#B89B6F
-color7		#F2DFC1
-color8		#A99C87
-color9		#937574
-color10		#D89086
-color11		#BBB364
-color12		#DBAC64
-color13		#D9D27B
-color14		#F6CF94
-color15		#F2DFC1
+color0      #3A3B3D
+color1		#AC7360
+color2		#748173
+color3		#AB8D89
+color4		#A19280
+color5		#B99580
+color6		#B9AA92
+color7		#F3E8D8
+color8		#AAA297
+color9		#DF8F75
+color10		#9BAC9A
+color11		#E4BCB7
+color12		#D7C2AA
+color13		#F7C6AA
+color14		#F7E2C2
+color15		#F3E8D8
