--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -33,6 +33,7 @@ bind = $mainMod alt, 7, exec, hyprctl dispatch moveworkspacetomonitor 7 current 
 bind = $mainMod alt, 8, exec, hyprctl dispatch moveworkspacetomonitor 8 current && hyprctl dispatch workspace 8
 bind = $mainMod alt, 9, exec, hyprctl dispatch moveworkspacetomonitor 9 current && hyprctl dispatch workspace 9
 bind = $mainMod alt, 0, exec, hyprctl dispatch moveworkspacetomonitor 10 current && hyprctl dispatch workspace 10
+bind = $mainMod alt, W, exec, zen-browser --profile /home/itan/.zen/a8hu3lor.Work
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
 #submap = passthru
